5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1771_672.log
== TEST (2019-05-23 18:28:28) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
n1= array(ones([1]))
print([n1]*n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:29:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
n1= ones(array([1]))
print([n1]*n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:29:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
n1= 1
print([n1]*n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 18:29:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
n1= 1
print([n1]*n)


-- EXECUTION TIME:
0.370697
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:31:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
n1=array(ones([1]))
print(n1*n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:31:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
n1=array([1])
print(n1*n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:31:33) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
n1=array([1])
print([n]1*n)


-- ERROR:
File "XXXX", line 5
    print([n]1*n)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:31:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
n1=array([1])
print([n1]*n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:32:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
n1=[1]
print(array([n1]*n))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:32:33) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
n1=[1]
print(array([n1]*n))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:34:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
n1=array(eval([1]))
print([n1]*6)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:36:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
v=ones(n, dtype=int)
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 18:36:54) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=int(input("digite um numero: "))
v=ones(n, dtype=int)
print(v)


-- EXECUTION TIME:
0.489684
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
